[package]
name = "rust-benched"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"
bench = false

[dependencies]
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "math"
harness = false

[[bench]]
name = "array_io"
harness = false

[[bench]]
name = "collections_iterations"
harness = false